--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,6 +40,9 @@
       animation: showup 1s 3s forwards;
       opacity: 0;
   }
+  .fade{
+      animation: fade_up 2s ease-in-out 1s 1 forwards;
+  }
   @keyframes showup {
     0% {
         opacity:0; 
@@ -52,7 +55,7 @@
 }
 @keyframes fade_up {
     0%{
-        margin-top: 1500px;
+        margin-top: -500px;
     }
     100%{
         margin-top: 0px;
